[tool.poetry]
name = "goit-python-web-hw05"
version = "0.1.0"
description = ""
authors = ["Oleh Ovchinnikov <112849429+xoka-pro@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "goit_python_web_hw05"}]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
aiohttp = "^3.8.3"
requests = "^2.28.2"
libs = "^0.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
